<resources>
    <string name="app_name">MentorMarketplace</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Log in center -->
    <string name="goLoginButton">Login</string>
    <string name="goSignupButton">Sign Up</string>
    <string name="goSignupPropmt">Dont have an account?</string>

    <!-- Title Screen Stuff -->
    <string name="thomas_intro_pic">Thomas</string>
    <string name="title_screen_button">Enter</string>

    <string name="title_screen_title">Insert Name Here sus</string>

    <string name="settings_screen_title">Settings</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="timezone">Time Zone</string>
    <string name="profile_editor">Profile Editor</string>
    <string name="City">City</string>
    <string name="Country_Region">Country/Region</string>
    <string name="Phone">Phone</string>
    <string name="Invisibility">Invisibility</string>
    <string name="Choose_Image">Choose Image</string>
    <string name="Profile_Picture">Profile Picture</string>
    <string name="View">View</string>
    <string name="BiographyHint">Bio (It is recommended to paste it here)</string>
    <string name="title_activity_scrolling_editor_test">ScrollingActivityEditorTest</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

    <!-- search for people -->
    <string name="Configure_Filters">Configure Filters</string>
    <string-array name="Languages">
        <item>English</item>
        <item>Spanish</item>
        <item>Chinese</item>
    </string-array>
    <string-array name="Time_Zones">
        <item>UTC-12</item>
        <item>UTC-11</item>
        <item>UTC-10</item>
        <item>UTC-9</item>
        <item>UTC-8</item>
        <item>UTC-7</item>
        <item>UTC-6</item>
        <item>UTC-5</item>
        <item>UTC-4</item>
        <item>UTC-3</item>
        <item>UTC-2</item>
        <item>UTC-1</item>
        <item>UTC+0</item>
        <item>UTC+1</item>
        <item>UTC+2</item>
        <item>UTC+3</item>
        <item>UTC+4</item>
        <item>UTC+5</item>
        <item>UTC+6</item>
        <item>UTC+7</item>
        <item>UTC+8</item>
        <item>UTC+9</item>
        <item>UTC+10</item>
        <item>UTC+11</item>
        <item>UTC+12</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_up">SignUp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_users_filter_found">No users with this filter configuration found.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="go_find_users">Go Find Users</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register_for_an_account">Register for an account</string>
    <string name="go_back">GO BACK</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="select_a_time_zone">Select a time zone</string>
    <string name="select_a_region">Select a Region</string>
    <string name="select_a_language">Select a Language</string>

</resources>