<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="insideOverlay">
    tools:context = "com.example.logintemplate.MainActivity"

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- bla bla bla-->
        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="Name"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="95dp" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/City"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="232dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="320dp" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/prompt_email"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="385dp" />

        <EditText
            android:id="@+id/editTextTextPersonName6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/Phone"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="458dp" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="248dp"
            android:layout_height="38dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/BiographyHint"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.777"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="606dp" />

        <Button
            android:id="@+id/cancel_profile_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:text="@string/cancel"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            tools:layout_editor_absoluteX="240dp"
            tools:layout_editor_absoluteY="280dp" />

        <Button
            android:id="@+id/update_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_primary"
            android:text="@string/update"
            android:onClick="updateProfile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            tools:layout_editor_absoluteX="302dp"
            tools:layout_editor_absoluteY="347dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="210dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="671dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_editor"
            android:textSize="40sp"
            tools:layout_editor_absoluteX="91dp"
            tools:layout_editor_absoluteY="16dp" />

        <Spinner
            android:id="@+id/time_zone"
            android:layout_width="208dp"
            android:layout_height="40dp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"

            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="170dp" />

        <Spinner
            android:id="@+id/country_region_spinner"
            android:layout_width="208dp"
            android:layout_height="40dp"
            android:contentDescription="@string/Country_Region"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"

            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="312dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="111dp"
            android:layout_height="40dp"
            android:text="@string/Choose_Image"
            android:textSize="8sp"
            tools:layout_editor_absoluteX="284dp"
            tools:layout_editor_absoluteY="529dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="59dp"
            android:layout_height="38dp"
            android:backgroundTint="#979797"
            android:text="@string/View"
            android:textSize="8sp"
            tools:layout_editor_absoluteX="210dp"
            tools:layout_editor_absoluteY="530dp" />

        <TextView
            android:id="@+id/profile_pic_label_editor"
            android:layout_width="129dp"
            android:layout_height="36dp"
            android:text="@string/Profile_Picture"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="530dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>